# zzdns

./: Cargo.toml  Cross.toml  README.md
config/: config.json  domain.txt
src/: cache_server.rs  cacher.rs  config.rs  dns.rs  dns_server.rs  lib.rs  main.rs  prefetcher.rs  resolver.rs  upstream.rs
